--- a/index.html
+++ b/index.html
@@ -7,34 +7,43 @@
 	</head>
 	<body>
 		<!-- Navigation bar set to appear as though no user is logged in -->
-		<div id="header">
+		<header>
 			<nav>
-				<div class="nav">Gmail</div>
-				<div class="nav">Images</div>
-				<div class="nav"></div> <!-- Google Apps button -->
-				<div class="nav"></div> <!-- Sign in button -->
+				<ul>
+					<li><a href="https://mail.google.com/">Gmail</a></li>
+					<li><a href="https://www.google.com/imghp?">Images</a></li>
+					<li class="grid"><a href="https://www.google.com/intl/en/options/"><img src="./resources/grid.png" /></a></li> 
+					<li><a href="https://accounts.google.com/ServiceLogin?"><button>Sign in</button></a></li>
+				</ul>
 			</nav>
-		</div>
+		</header>
 		<div id="main">
-			<img src="./resources/google_logo.png" />
-			<form>
-				<input type="text"></input><br />
-				<button>Google Search</button>
-				<button>I'm Feeling Lucky</button>
+			<p>
+				<img src="./resources/logo.png" />
+			</p>
+			<form autocomplete="off" action="https://www.google.com/search?q=">
+				<p><input name="search" id="search" type="text" autofocus="autofocus" /></p>
+
+				<p>
+					<button type="submit">Google Search</button>
+					<button type="submit">I'm Feeling Lucky</button>
+				</p>
+
 			</form>
 		</div>
-		<div id="footer">
-			<div class="links">
-				<!-- Left side of footer -->
-				<div class="nav">Advertising</div>
-				<div class="nav">Business</div>
-				<div class="nav">About</div>
+		<footer>
+			<ul id="left_links">
+				<li><a href="#">Advertising</a></li>
+				<li><a href="#">Business</a></li>
+				<li><a href="#">About</a></li>
+			</ul>
 
-				<!-- Right side of footer -->
-				<div class="nav">Privacy</div>
-				<div class="nav">Terms</div>
-				<div class="nav">Settings</div>
-			</div>
-		</div>
+			<ul id="right_links">
+				<li><a href="#">Privacy</a></li>
+				<li><a href="#">Terms</a></li>
+				<li><a href="#">Settings</a></li>
+			</ul>
+		</footer>
+
 	</body>
 </html>	
